samples/_failures_safe/1761636397_261516_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f8624f4.c: In function ‘main’:
./samples/SAFE/__tmp_7f8624f4.c:141:13: error: expected declaration or statement at end of input
  141 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_7f8624f4.c:141:13: error: expected declaration or statement at end of input
